<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ic_home"
        android:icon="@drawable/ic_home"
        android:title="@string/bottomnavigation_home"/>
    <item
        android:id="@+id/ic_weight_scale"
        android:icon="@drawable/ic_weight_scale"
        android:title="@string/bottomnavigation_weight"/>
    <item
        android:id="@+id/ic_local_drink"
        android:icon="@drawable/ic_local_drink"
        android:title="@string/bottomnavigation_water"/>
    <item
        android:id="@+id/ic_directions_run"
        android:icon="@drawable/ic_directions_run"
        android:title="@string/bottomnavigation_exercise"/>
    <item
        android:id="@+id/ic_insert_emoticon"
        android:icon="@drawable/ic_insert_emoticon"
        android:title="@string/bottomnavigation_mood"/>

</menu>