<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <RelativeLayout
        android:id="@+id/relLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relLayoutTop"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/toolbarTop"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                />
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relLayoutMiddle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/relLayoutBotBar"
            android:layout_below="@id/relLayoutTop">

            <ImageButton
                android:id="@+id/btn1l"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="76dp"
                android:layout_height="166dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/layout_water_description_1l"
                android:scaleType="fitStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/water_bottle" />

            <ImageButton
                android:id="@+id/btn1dl"
                style="@android:style/Widget.Material.Button.Borderless"
                android:layout_width="76dp"
                android:layout_height="166dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/layout_water_description_1dl"
                android:scaleType="fitStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/water_bottle" />

            <ImageButton
                android:id="@+id/btn5dl"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="76dp"
                android:layout_height="166dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/layout_water_description_5dl"
                android:scaleType="fitStart"
                app:layout_constraintEnd_toStartOf="@+id/btn1l"
                app:layout_constraintStart_toStartOf="@+id/guidelineVertical50"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/water_bottle" />

            <ImageButton
                android:id="@+id/btn2dl"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="76dp"
                android:layout_height="166dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/layout_water_description_2dl"
                android:scaleType="fitStart"
                app:layout_constraintEnd_toStartOf="@+id/guidelineVertical50"
                app:layout_constraintStart_toEndOf="@+id/btn1dl"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/water_bottle" />

            <TextView
                android:id="@+id/tv1dl"
                android:layout_width="76dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:text="@string/layout_water_1dl"
                android:textAlignment="center"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn1dl" />

            <TextView
                android:id="@+id/tv2dl"
                android:layout_width="76dp"
                android:layout_height="32dp"
                android:layout_marginStart="12dp"
                android:text="@string/layout_water_2dl"
                android:textAlignment="center"
                android:textSize="25sp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineVertical50"
                app:layout_constraintStart_toEndOf="@+id/tv1dl"
                app:layout_constraintTop_toBottomOf="@+id/btn2dl" />

            <TextView
                android:id="@+id/tv5dl"
                android:layout_width="76dp"
                android:layout_height="32dp"
                android:layout_marginEnd="12dp"
                android:text="@string/layout_water_5dl"
                android:textAlignment="center"
                android:textSize="25sp"
                app:layout_constraintEnd_toStartOf="@+id/tv1l"
                app:layout_constraintStart_toStartOf="@+id/guidelineVertical50"
                app:layout_constraintTop_toBottomOf="@+id/btn5dl" />

            <TextView
                android:id="@+id/tv1l"
                android:layout_width="76dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/layout_water_1l"
                android:textAlignment="center"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn1l" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVertical50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/tvWaterDrankTodayDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_water_drankToday"
                android:textAlignment="center"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.432" />

            <TextView
                android:id="@+id/tvWaterDrankToday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWaterDrankTodayDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <RelativeLayout
            android:id="@+id/relLayoutBotBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavViewBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/white_grey_border_top"
                app:labelVisibilityMode="labeled"
                app:menu="@menu/bottom_navigation_menu" />
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>