<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relLayout">
        <RelativeLayout
            android:id="@+id/relLayoutTop"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/toolbarTop"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                />
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relLayoutMiddle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/relLayoutBotBar"
            android:layout_below="@id/relLayoutTop">

            <SeekBar
                android:id="@+id/seekbarMood"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="10"
                android:progress="5"
                app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal55"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/imgMood"
                style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/layout_mood_imgDescription"
                app:layout_constraintBottom_toTopOf="@+id/tvMood"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@color/colorAccent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal65"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.65" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal55"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.55" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineVertical50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <TextView
                android:id="@+id/tvMood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/seekbarMood"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvDateMood"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/soft_corners"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:hint="@string/layout_mood_chooseDate"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal65"
                app:layout_constraintEnd_toStartOf="@+id/guidelineVertical50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seekbarMood"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"/>

            <Button
                android:id="@+id/btnAddMood"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/soft_corners"
                android:fontFamily="sans-serif-light"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/layout_mood_addMood"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal65"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guidelineVertical50"
                app:layout_constraintTop_toBottomOf="@+id/seekbarMood"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"/>

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chartMood"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal65" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <RelativeLayout
            android:id="@+id/relLayoutBotBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true">
            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bottomNavViewBar"
                android:background="@drawable/white_grey_border_top"
                app:menu="@menu/bottom_navigation_menu"
                app:labelVisibilityMode="labeled">
            </com.google.android.material.bottomnavigation.BottomNavigationView>
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>